Fix overflow bugs caused by modpack tooltip

--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -317,6 +317,7 @@
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    overflow-y: scroll;
     padding: 8px;
 }
 .modpack-item {
